# Robot-Framework

./: .gitignore  .pylintrc  LICENSE  README.md  Robot-Framework.drawio  Robot-Queue-Framework.drawio  main.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: Changelog.yml  Linting.yml  Version.yml  pylint.yml
Illustrations/: Robot-Framework.drawio
robot_framework/: __main__.py  config.py  error_screenshot.py  exceptions.py  framework.py  get_constants.py  initialize.py  linear_framework.py  process.py  queue_framework.py  reset.py
src/: error_screenshot.py  framework.py  get_constants.py  initialize.py  process.py  reset.py
